# Agdalisk

./: .gitignore  Makefile  ace-verified.cabal  agdalisk.cabal  shell.nix
agda/: Main.agda
agda/Ace/: Access.agda  Protocol.agda  Route.agda  Subscription.agda
src/AceVerified/: Access.hs  Protocol.hs  Subscription.hs
src/Agdalisk/: Access.hs  Protocol.hs  Route.hs  Subscription.hs
