cabal-version:      2.4
name:               agdalisk
version:            0.1.0.0
synopsis:           Agda-verified core types for the Ace platform
description:
  Machine-checked types and state machines compiled from Agda via
  the GHC backend. Proofs are erased at runtime, zero overhead.
license:            MIT
build-type:         Simple

library
  exposed-modules:
    Agdalisk.Access
    Agdalisk.Subscription
    Agdalisk.Protocol
    Agdalisk.Route

  other-modules:
    MAlonzo.RTE
    MAlonzo.RTE.Float
    MAlonzo.Code.Main
    MAlonzo.Code.Agda.Builtin.Bool
    MAlonzo.Code.Agda.Builtin.Char
    MAlonzo.Code.Agda.Builtin.Equality
    MAlonzo.Code.Agda.Builtin.IO
    MAlonzo.Code.Agda.Builtin.List
    MAlonzo.Code.Agda.Builtin.Maybe
    MAlonzo.Code.Agda.Builtin.Nat
    MAlonzo.Code.Agda.Builtin.Sigma
    MAlonzo.Code.Agda.Builtin.String
    MAlonzo.Code.Agda.Builtin.Unit
    MAlonzo.Code.Agda.Primitive
    MAlonzo.Code.Ace.Access
    MAlonzo.Code.Ace.Subscription
    MAlonzo.Code.Ace.Protocol
    MAlonzo.Code.Ace.Route

  hs-source-dirs:   src, generated
  default-language: Haskell2010
  build-depends:
    base >= 4.14 && < 5,
    text >= 1.2
  ghc-options: -O2 -Wwarn
